--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -41,7 +41,7 @@ Before you begin, you will need to have created an account with {scc}, and downl
 
 
 .Procedure: Preparing for SLES Installation
-. In [command]``virt-manager`` select menu:File[New Virtual Machine].
+. In the Virtual Machine Manager tool ([command]``virt-manager``), click menu:File[New Virtual Machine].
 
 . Click btn:[Local install media (ISO image or CDROM)].
 
