--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -238,7 +238,7 @@ Grant [command]``sudo`` access to the user by adding this line to the [filename]
 <user>  ALL=NOPASSWD: /usr/bin/python, /usr/bin/python2, /usr/bin/python3
 ----
 
-
+This passwordless root access is only needed for onboarding the client. Once the salt-minion is installed, this is no longer needed, because salt-minion is running with root privileges. So it is recommended to remove this line after the minion has been successfully onboarded.
 
 == Register Clients
 
