--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -10,6 +10,11 @@ For information on registering with {scc}, retrieving your organization credenti
 
 [NOTE]
 ====
+To change a {sles}{nbsp}{sles-version}{nbsp}{sp-version} into a {susemgr}{nbsp}{productnumber}, follow the instructions at xref:installation:install-vm.adoc[].
+====
+
+[NOTE]
+====
 Before installing {susemgr}, ensure your physical or virtual machine has enough disk space and RAM by checking the requirements at xref:hardware-requirements.adoc[Hardware].
 ====
 
