admon re changing auth method

--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -91,6 +91,13 @@ SSO in {productname} does not support:
 * SAML support for other products (check with the respective product documentation).
 
 
+[IMPORTANT]
+====
+If you change from the default authentication method to single sign-on, the new SSO credentials apply only to the {webui}.
+Client tools such as ``mgr-sync`` or ``spacecmd`` will continue to work with the default authentication method only.
+====
+
+
 
 === Prerequisites
 
